--- a/lab06/views/suasach.ejs
+++ b/lab06/views/suasach.ejs
@@ -38,7 +38,7 @@
                             <label for="" class="form-control-label">Nhà xuất bản</label>
                             <select class="form-control custom-select" name="nhaXB">
                                 <option value="">-----Chọn nhà xuất bản-----</option>
-                                <option value="1" <%=sach.nhaXB == 1 ? "selected" : ""%>><Nhà xuất bản trẻ></option>
+                                <option value="1" <%=sach.nhaXB == 1 ? "selected" : ""%>>Nhà xuất bản trẻ</option>
                                 <option value="2" <%=sach.nhaXB == 2 ? "selected" : ""%>>Nhà xuất bản Giáo Dục</option>
                                 <option value="3" <%=sach.nhaXB == 3 ? "selected" : ""%>>Nhà xuất bản Thiết kế</option>
                             </select>
