--- a/lab06/views/themsach.ejs
+++ b/lab06/views/themsach.ejs
@@ -13,7 +13,7 @@
         <div class="row justify-content-center">
             <div class ="card w-50">
                 <div class="card-header bg-success text-white font-weight-bold text-center">THÊM SÁCH MỚI</div>
-                <form action="/sach/them" method="post" id="main-form" enctype="multipart/form-data">
+                <form action="/themsach" method="post" id="main-form" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="">Tên Sách</label>
                         <input class="form-control" type="text" id="=txttensach" name="tenSach" value="">
